# potsnitch

./: .gitignore  README.md  pyproject.toml  requirements.txt
potsnitch/: __init__.py  cli.py  scanner.py
potsnitch/core/: __init__.py  base.py  registry.py  result.py
potsnitch/detectors/: __init__.py  anomaly.py  conpot.py  cve.py  database.py  dionaea.py  elasticsearch.py  framework.py  ftp.py  honeyd.py  http.py  rdp.py  smtp.py  ssh.py  tarpit.py  telnet.py  tpot.py  vnc.py
potsnitch/probes/: __init__.py  credentials.py  timing.py
potsnitch/signatures/: __init__.py  versions.py
potsnitch/utils/: __init__.py  network.py  output.py
tests/docker/: docker-compose.yml
tests/integration/: __init__.py  conftest.py  test_credential_auth.py  test_db_detection.py  test_ics_detection.py  test_ssh_detection.py
tests/unit/: conftest.py  test_cli.py  test_scanner.py
tests/unit/core/: test_base.py  test_registry.py  test_result.py
tests/unit/detectors/: test_adb.py  test_anomaly.py  test_conpot.py  test_cve.py  test_database.py  test_dionaea.py  test_elasticsearch.py  test_framework.py  test_ftp.py  test_honeyd.py  test_http.py  test_rdp.py  test_smtp.py  test_ssh.py  test_tarpit.py  test_telnet.py  test_tpot.py  test_vnc.py
tests/unit/probes/: test_credentials.py  test_timing.py
tests/unit/signatures/: __init__.py  test_versions.py
tests/unit/utils/: test_network.py  test_output.py  test_tls.py
